--- a/background-override.user.css
+++ b/background-override.user.css
@@ -1,24 +1,31 @@
 /* ==UserStyle==
 @name        WM background reset for screenshots
 @namespace   StylishThemes
-@version     1.0.3
+@version     1.0.4
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/background-override.user.css
 @license     CC-BY-SA-4.0
 @author      quiddity-wp
 ==/UserStyle== */
-@-moz-document domain("wikipedia.org"),
-domain("wikimedia.org"),
-domain("wiktionary.org"),
-domain("mediawiki.org"),
-domain("wikisource.org"),
-domain("wikivoyage.org"),
-domain("wikibooks.org"),
-domain("wikinews.org"),
-domain("wikiversity.org"),
-domain("wikiquote.org"),
-domain("wikidata.org"),
-domain("beta.wmflabs.org"), 
-domain("wikifunctions.org") {
-    body {background-color: #FFFFFF !important}
+@-moz-document domain("wikipedia.org"), 
+  domain("meta.wikimedia.org"), 
+  domain("office.wikimedia.org"), 
+  domain("commons.wikimedia.org"), 
+  domain("species.wikimedia.org"), 
+  domain("outreach.wikimedia.org"), 
+  domain("wikimania.wikimedia.org"), 
+  domain("foundation.wikimedia.org"), 
+  domain("wikitech.wikimedia.org"), 
+  domain("wiktionary.org"), 
+  domain("mediawiki.org"), 
+  domain("wikisource.org"), 
+  domain("wikivoyage.org"), 
+  domain("wikibooks.org"), 
+  domain("wikinews.org"), 
+  domain("wikiversity.org"), 
+  domain("wikiquote.org"), 
+  domain("wikidata.org"), 
+  domain("beta.wmflabs.org"), 
+  domain("wikifunctions.org") { 
+    body, .mw-portlet {background-color: #FFFFFF !important}
 }
