--- a/minimal-vector.user.css
+++ b/minimal-vector.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        wikimedia minimal-vector style
 @namespace   StylishThemes
-@version     1.0.5
+@version     1.0.7
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/minimal-vector.user.css
 @license     CC-BY-SA-4.0
@@ -22,13 +22,15 @@ domain("beta.wmflabs.org"),
 domain("wikifunctions.org") { 
 /* NOTE: VECTOR SKIN is assumed. */
 /* test the minimal look */
-  body {background-color: #fff;}
-  #mw-page-base {background-image: none; background-color: #fff;}
-  div#content  {border: 1px solid #fff;}
-  div.vectorTabs ul li  {background-image: none; background-color: #fff;}
+  
+  /* override grey */
+  body {background-color: #fff;} 
+  /* override grey */
+  #mw-page-base {background-image: none; background-color: #fff;} 
+  /* remove blue border */
+  div#content  {border: 1px solid #fff;} 
+  /* whiten the tabs-bar */
   #p-views, #p-views *, #p-namespaces, #p-namespaces * {background-image: none;}
-  div.vectorTabs ul li.selected {border-bottom: 2px solid #347bff;}
-  div.vectorTabs ul li span a:hover {text-decoration: none;}
-  .mw-headline-anchor {display: none;}
+  /* fix sidebar-header text color */
   #mw-panel .portal h3 {color: #333;}
 }
