--- a/minimal-vector.user.css
+++ b/minimal-vector.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        wikimedia minimal-vector style
 @namespace   StylishThemes
-@version     1.0.8
+@version     1.0.9
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/minimal-vector.user.css
 @license     CC-BY-SA-4.0
@@ -40,4 +40,6 @@ domain("wikifunctions.org") {
   #p-views, #p-views *, #p-namespaces, #p-namespaces * {background-image: none;}
   /* fix sidebar-header text color */
   #mw-panel .portal h3 {color: #333;}
+  /* fix sidebar background (New Vector) */
+  #mw-panel {background:#fff}
 }
