--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        wikimedia quiddity's various vector style tweaks
 @namespace   StylishThemes
-@version     1.0.30
+@version     1.0.31
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -106,4 +106,8 @@ domain("wikifunctions.org") {
     .mw-sidebar-action {
         display: none;
     }    
+ /* Indent subheads */
+    .vector-body h3 {padding-left: 10px;}
+    .vector-body h4 {padding-left: 30px;}
+    .vector-body h5 {padding-left: 50px;}
 }
