--- a/new-vector-whitespace.user.css
+++ b/new-vector-whitespace.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        wikimedia DI whitespace tweaks
 @namespace   StylishThemes
-@version     1.0.11
+@version     1.0.12
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-whitespace.user.css
 @license     CC-BY-SA-4.0
@@ -37,5 +37,5 @@ domain("wikifunctions.org") {
   .mw-header {margin:0; padding-top:0;}
 
 /* nudge sidebar-button up into corner */
-  #mw-sidebar-button {height:29px}
+  #mw-sidebar-button {height:29px; margin-left:-10px}
 }
