--- a/new-vector-max-width.user.css
+++ b/new-vector-max-width.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        wikimedia DI max-width tweaks
 @namespace   StylishThemes
-@version     1.0.13
+@version     1.0.14
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-max-width.user.css
 @license     CC-BY-SA-4.0
@@ -32,14 +32,16 @@ domain("wikifunctions.org")
 
 /* Remove max-width */
 .mw-workspace-container {max-width: none;}
-.mw-content-container {max-width: none;	margin-left: 0 !important;}
-#mw-sidebar-checkbox:not(:checked) ~ .mw-workspace-container .mw-content-container {margin-left: 0 !important;}
-#mw-sidebar-checkbox:checked ~ .mw-workspace-container .mw-content-container {margin-left: 184px !important;}
+.mw-content-container {max-width: none;}
 
   /* Refine further */
 .mw-page-container {max-width: none; padding: 0;}
 .mw-article-toolbar-container {max-width: none;}
 #mw-panel {padding-left: 25px; max-width: 184px; margin-top:-5px;}
+    
+/* Sidebar fixes */
+#mw-sidebar-checkbox:not(:checked) ~ .mw-workspace-container .mw-content-container {margin-left: 0 !important;}
+#mw-sidebar-checkbox:checked ~ .mw-workspace-container .mw-content-container {margin-left: 184px !important;}
   
   /* ToC */
 .sidebar-toc {margin: 0 !important; padding-left: 20px}
