--- a/new-vector-max-width.user.css
+++ b/new-vector-max-width.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        wikimedia DI max-width tweaks
 @namespace   StylishThemes
-@version     1.0.14
+@version     1.0.15
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-max-width.user.css
 @license     CC-BY-SA-4.0
@@ -35,7 +35,7 @@ domain("wikifunctions.org")
 .mw-content-container {max-width: none;}
 
   /* Refine further */
-.mw-page-container {max-width: none; padding: 0;}
+.mw-page-container {max-width: none; padding: 1px;}
 .mw-article-toolbar-container {max-width: none;}
 #mw-panel {padding-left: 25px; max-width: 184px; margin-top:-5px;}
     
