more ToC tweaks

--- a/new-vector-max-width.user.css
+++ b/new-vector-max-width.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        wikimedia DI max-width tweaks
 @namespace   StylishThemes
-@version     1.0.16
+@version     1.0.17
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-max-width.user.css
 @license     CC-BY-SA-4.0
@@ -37,16 +37,15 @@ domain("wikifunctions.org")
   /* Refine further */
 .mw-page-container {max-width: none; padding: 1px;}
 .mw-article-toolbar-container {max-width: none;}
-#mw-panel {padding-left: 25px; max-width: 184px; margin-top:-5px;}
+#mw-panel {padding-left: 25px; max-width: 184px; margin-top:-5px; padding-right: 0}
 .mw-sidebar {width: 184px}
-
     
 /* Sidebar fixes */
 #mw-sidebar-checkbox:not(:checked) ~ .mw-workspace-container .mw-content-container {margin-left: 0 !important;}
 #mw-sidebar-checkbox:checked ~ .mw-workspace-container .mw-content-container {margin-left: 184px !important;}
   
   /* ToC */
-.sidebar-toc {margin: 0 !important; padding-left: 20px}
+.sidebar-toc {margin: 0 !important; padding-left: 20px; max-height:90vh}
 
 /* Fixes for small windows - otherwise the sidebar jumps out */
 @media screen and (max-width: 720px) {
