--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        wikimedia quiddity's various vector style tweaks
 @namespace   StylishThemes
-@version     1.0.32
+@version     1.0.33
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -27,6 +27,9 @@ domain("wikiquote.org"),
 domain("wikidata.org"), 
 domain("beta.wmflabs.org"), 
 domain("wikifunctions.org") { 
+/* Stop Menus jumping on page load */
+@import url('https://meta.wikimedia.org/w/index.php?title=MediaWiki:Gadget-MoreMenu-pagestyles.en.css&action=raw&ctype=text/css');
+    
 /* hide the ToC's annoying "[hide]" links */
     .toctogglespan {
         display: none;
